--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0c07d8d2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-09T09:02:30.101984Z",
-     "start_time": "2022-12-09T09:02:24.812300Z"
+     "end_time": "2022-12-13T08:17:40.585573Z",
+     "start_time": "2022-12-13T08:17:40.128951Z"
     }
    },
    "outputs": [],
@@ -2367,12 +2367,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "cb9f24e5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-06T02:51:17.811949Z",
-     "start_time": "2022-12-06T02:51:15.380916Z"
+     "end_time": "2022-12-13T08:17:47.066199Z",
+     "start_time": "2022-12-13T08:17:44.508060Z"
     }
    },
    "outputs": [
@@ -2388,6 +2388,32 @@
    "source": [
     "df_train = pd.read_csv('data/Udacity_MAILOUT_052018_TRAIN.csv', sep=';')\n",
     "df_test = pd.read_csv('data/Udacity_MAILOUT_052018_TEST.csv', sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4b6cb896",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-12-13T08:17:50.602461Z",
+     "start_time": "2022-12-13T08:17:50.586478Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(42833, 366)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.shape"
    ]
   },
   {
