--- a/classification_model.ipynb
+++ b/classification_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "523c4eba",
+   "id": "c975b51b",
    "metadata": {},
    "source": [
     "# 0.0 Imports"
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7cb8eb7",
+   "id": "af7c3467",
    "metadata": {},
    "source": [
     "# 1.0 Import Train and Test"
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e9e2e00",
+   "id": "fc1023ff",
    "metadata": {},
    "source": [
     "# 2.0 Choosing the classification model"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04dce3a2",
+   "id": "db5e7d55",
    "metadata": {},
    "source": [
     "Now we will use the ```setup``` function from ```pycaret```. This function initializes the training environment and creates the transformation pipeline. It takes two mandatory parameters: ```data``` and ```target```."
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "211d9a71",
+   "id": "a8e1cc0d",
    "metadata": {},
    "source": [
     "Another function from ```pycaret``` is the ```compare_models```. It trains and evaluates the performance of all the estimators available in the model library using cross-validation.\n",
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "03f94263",
+   "id": "8c497408",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-13T11:41:03.040894Z",
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "256b05f9",
+   "id": "865832b7",
    "metadata": {},
    "source": [
     "The decision tree models performed the best, and for this case we will choose the ```Decision Tree Classifier```\n",
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "3867933e",
+   "id": "67eac0d2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-14T03:38:04.477869Z",
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff13d044",
+   "id": "4dc4e928",
    "metadata": {},
    "source": [
     "Now we will use the ```tune_model``` function from ```pycaret``` to optimize the model."
@@ -877,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "af7ae031",
+   "id": "e5617d33",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-14T04:00:26.033350Z",
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddaaa27",
+   "id": "1ad751d3",
    "metadata": {},
    "source": [
     "Great News! \n",
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a15b59c",
+   "id": "36f6945c",
    "metadata": {},
    "source": [
     "# 3.0 Evaluating Model"
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "2233290f",
+   "id": "d669bad3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-14T04:00:26.686651Z",
@@ -1083,7 +1083,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "fef73ce1",
+   "id": "38c6c385",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-14T04:00:27.258590Z",
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d381e40f",
+   "id": "7be2bc7a",
    "metadata": {},
    "source": [
     "# 4.0 Prediciting on test data"
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "1bd09bcc",
+   "id": "aaa106e2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-14T04:00:41.364809Z",
@@ -1346,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "e5c25be9",
+   "id": "c5cb4e8f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-14T04:00:41.713702Z",
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38d5430f",
+   "id": "8e2536f0",
    "metadata": {},
    "source": [
     "The result is fairly similar with the training data."
@@ -1403,66 +1403,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "id": "f8257780",
+   "execution_count": 192,
+   "id": "1dbe7bc5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-14T04:03:12.716910Z",
-     "start_time": "2022-12-14T04:03:08.170636Z"
+     "end_time": "2022-12-14T04:03:59.136770Z",
+     "start_time": "2022-12-14T04:03:54.479830Z"
     }
    },
    "outputs": [],
    "source": [
+    "#exporting our prediction to a csv\n",
     "df_predicted.to_csv('data/predictions/pred.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0574d699",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6963bc0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4f8a2bd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abfe245f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70dd4088",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32462135",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
